First changes - add header comment

--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<h1>USINT THIS AS MY PLAYGROUND FOR Javascript, Html, CSS, Vue.js & Github</h1>
 <h1 id="inbuiltjavascriptgreeting"></h1>
 <h1 id="jquerygreeting"></h1>
 <div id="app">
