Loading data from Nasa's APIs

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<style>
+    [v-cloak] {
+        display: none;
+    }
+</style>
 <div id="app">
     <div class="container">
-        <form class="mt-5">
+        <form v-if="!submitted" class="mt-5">
+        <!-- <form v-show="!submitted" class="mt-5"> -->
             <div class="form-group">
                 <label for="email">Email</label>
                 <!-- <input type="email" v-bind:value="email" class="form-control form-control-lg"></iput> -->
                 <!-- <input type="email" :value="email" class="form-control form-control-lg"></iput> -->
                 <!-- <input type="email" v-model:value="email" class="form-control form-control-lg"></iput> -->
-                <input type="email" v-model:value.prevent="email" class="form-control form-control-lg"></iput>
+                <input type="email" v-model:value="email" class="form-control form-control-lg"></iput>
             </div>
-            <button type="submit" v-on:click="process" class="btn btn-primary">Submit</button>
+            <button type="submit" @click.prevent="process" class="btn btn-primary">Submit</button>
         </form>
+        <h2 v-if="submitted" v-cloak class="mt-5">Thanks for signing up!</h2>
+        <!-- <h2 v-show="submitted" v-cloak class="mt-5">Thanks for signing up!</h2> -->
+        <!-- <h2 v-else class="mt-5">Show me too</h2> -->
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -21,13 +29,14 @@
     var vm = new Vue({
         el: '#app',
         data: {
-            email: 'gacooke@microsoft.com'
-
+            email: 'gacooke@microsoft.com',
+            submitted: false
         },
         methods: {
             process: function()
             {
                 alert('Submitted ' + this.email);
+                this.submitted = true;
             }
         }
     })
